parser/cool.output
Nonterminals useless in grammar

   simple_case


Terminals unused in grammar

   ERROR


State 116 conflicts: 9 shift/reduce
State 141 conflicts: 9 shift/reduce
State 154 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'
    6      | CLASS TYPEID '{' error '}' ';'
    7      | CLASS error '{' optional_feature_list '}' ';'
    8      | CLASS error '{' error '}' ';'

    9 optional_feature_list: %empty
   10                      | feature_list

   11 feature_list: feature ';'
   12             | feature_list feature ';'
   13             | error ';'

   14 feature: OBJECTID ':' TYPEID
   15        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   16        | OBJECTID ':' TYPEID ASSIGN expr

   17 formal_list: %empty
   18            | formal
   19            | formal_list ',' formal

   20 formal: OBJECTID ':' TYPEID

   21 expr: OBJECTID ASSIGN expr
   22     | expr '.' OBJECTID '(' expr_aux ')'
   23     | OBJECTID '(' expr_aux ')'
   24     | expr '@' TYPEID '.' OBJECTID '(' expr_aux ')'
   25     | IF expr THEN expr ELSE expr FI
   26     | WHILE expr LOOP expr POOL
   27     | '{' expr_list '}'
   28     | LET expr_let
   29     | CASE expr OF case_list ESAC
   30     | NEW TYPEID
   31     | ISVOID expr
   32     | expr '+' expr
   33     | expr '-' expr
   34     | expr '*' expr
   35     | expr '/' expr
   36     | '~' expr
   37     | expr '<' expr
   38     | expr LE expr
   39     | expr '=' expr
   40     | NOT expr
   41     | '(' expr ')'
   42     | OBJECTID
   43     | INT_CONST
   44     | STR_CONST
   45     | BOOL_CONST

   46 expr_aux: %empty
   47         | expr
   48         | expr_aux ',' expr

   49 expr_list: expr ';'
   50          | expr_list expr ';'
   51          | error ';'

   52 expr_let: OBJECTID ':' TYPEID IN expr
   53         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   54         | OBJECTID ':' TYPEID ',' expr_let
   55         | OBJECTID ':' TYPEID ASSIGN expr ',' expr_let
   56         | error IN expr
   57         | error ',' expr_let

   58 case_list: OBJECTID ':' TYPEID DARROW expr ';'
   59          | case_list OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 22 23 24 41
')' (41) 15 22 23 24 41
'*' (42) 34
'+' (43) 32
',' (44) 19 48 54 55 57
'-' (45) 33
'.' (46) 22 24
'/' (47) 35
':' (58) 14 15 16 20 52 53 54 55 58 59
';' (59) 4 5 6 7 8 11 12 13 49 50 51 58 59
'<' (60) 37
'=' (61) 39
'@' (64) 24
'{' (123) 4 5 6 7 8 15 27
'}' (125) 4 5 6 7 8 15 27
'~' (126) 36
error (256) 6 7 8 13 51 56 57
CLASS (258) 4 5 6 7 8
ELSE (259) 25
FI (260) 25
IF (261) 25
IN (262) 52 53 56
INHERITS (263) 5
LET (264) 28
LOOP (265) 26
POOL (266) 26
THEN (267) 25
WHILE (268) 26
CASE (269) 29
ESAC (270) 29
OF (271) 29
DARROW (272) 58 59
NEW (273) 30
ISVOID (274) 31
STR_CONST (275) 44
INT_CONST (276) 43
BOOL_CONST (277) 45
TYPEID (278) 4 5 6 14 15 16 20 24 30 52 53 54 55 58 59
OBJECTID (279) 14 15 16 20 21 22 23 24 42 52 53 54 55 58 59
ASSIGN (280) 16 21 53 55
NOT (281) 40
LE (282) 38
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6 7 8, on right: 2 3
optional_feature_list (49)
    on left: 9 10, on right: 4 5 7
feature_list (50)
    on left: 11 12 13, on right: 10 12
feature (51)
    on left: 14 15 16, on right: 11 12
formal_list (52)
    on left: 17 18 19, on right: 15 19
formal (53)
    on left: 20, on right: 18 19
expr (54)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    39 40 41 42 43 44 45, on right: 15 16 21 22 24 25 26 29 31 32 33
    34 35 36 37 38 39 40 41 47 48 49 50 52 53 55 56 58 59
expr_aux (55)
    on left: 46 47 48, on right: 22 23 24 48
expr_list (56)
    on left: 49 50 51, on right: 27 50
expr_let (57)
    on left: 52 53 54 55 56 57, on right: 28 54 55 57
case_list (58)
    on left: 58 59, on right: 29 59


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'
    6      | CLASS . TYPEID '{' error '}' ';'
    7      | CLASS . error '{' optional_feature_list '}' ';'
    8      | CLASS . error '{' error '}' ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    7 class: CLASS error . '{' optional_feature_list '}' ';'
    8      | CLASS error . '{' error '}' ';'

    '{'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'
    6      | CLASS TYPEID . '{' error '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    7 class: CLASS error '{' . optional_feature_list '}' ';'
    8      | CLASS error '{' . error '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 9 (optional_feature_list)

    optional_feature_list  go to state 14
    feature_list           go to state 15
    feature                go to state 16


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 17


State 11

    4 class: CLASS TYPEID '{' . optional_feature_list '}' ';'
    6      | CLASS TYPEID '{' . error '}' ';'

    error     shift, and go to state 18
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 9 (optional_feature_list)

    optional_feature_list  go to state 19
    feature_list           go to state 15
    feature                go to state 16


State 12

    8 class: CLASS error '{' error . '}' ';'
   13 feature_list: error . ';'

    '}'  shift, and go to state 20
    ';'  shift, and go to state 21


State 13

   14 feature: OBJECTID . ':' TYPEID
   15        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   16        | OBJECTID . ':' TYPEID ASSIGN expr

    ':'  shift, and go to state 22
    '('  shift, and go to state 23


State 14

    7 class: CLASS error '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 24


State 15

   10 optional_feature_list: feature_list .
   12 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 13

    $default  reduce using rule 10 (optional_feature_list)

    feature  go to state 25


State 16

   11 feature_list: feature . ';'

    ';'  shift, and go to state 26


State 17

    5 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 27


State 18

    6 class: CLASS TYPEID '{' error . '}' ';'
   13 feature_list: error . ';'

    '}'  shift, and go to state 28
    ';'  shift, and go to state 21


State 19

    4 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 29


State 20

    8 class: CLASS error '{' error '}' . ';'

    ';'  shift, and go to state 30


State 21

   13 feature_list: error ';' .

    $default  reduce using rule 13 (feature_list)


State 22

   14 feature: OBJECTID ':' . TYPEID
   16        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 31


State 23

   15 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 32

    $default  reduce using rule 17 (formal_list)

    formal_list  go to state 33
    formal       go to state 34


State 24

    7 class: CLASS error '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 35


State 25

   12 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 36


State 26

   11 feature_list: feature ';' .

    $default  reduce using rule 11 (feature_list)


State 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 37
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 9 (optional_feature_list)

    optional_feature_list  go to state 38
    feature_list           go to state 15
    feature                go to state 16


State 28

    6 class: CLASS TYPEID '{' error '}' . ';'

    ';'  shift, and go to state 39


State 29

    4 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 40


State 30

    8 class: CLASS error '{' error '}' ';' .

    $default  reduce using rule 8 (class)


State 31

   14 feature: OBJECTID ':' TYPEID .
   16        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 41

    $default  reduce using rule 14 (feature)


State 32

   20 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 42


State 33

   15 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   19 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 43
    ','  shift, and go to state 44


State 34

   18 formal_list: formal .

    $default  reduce using rule 18 (formal_list)


State 35

    7 class: CLASS error '{' optional_feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 36

   12 feature_list: feature_list feature ';' .

    $default  reduce using rule 12 (feature_list)


State 37

   13 feature_list: error . ';'

    ';'  shift, and go to state 21


State 38

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 45


State 39

    6 class: CLASS TYPEID '{' error '}' ';' .

    $default  reduce using rule 6 (class)


State 40

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 41

   16 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 60


State 42

   20 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 61


State 43

   15 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 62


State 44

   19 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 32

    formal  go to state 63


State 45

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 64


State 46

   25 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 65


State 47

   28 expr: LET . expr_let

    error     shift, and go to state 66
    OBJECTID  shift, and go to state 67

    expr_let  go to state 68


State 48

   26 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 69


State 49

   29 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 70


State 50

   30 expr: NEW . TYPEID

    TYPEID  shift, and go to state 71


State 51

   31 expr: ISVOID . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 72


State 52

   44 expr: STR_CONST .

    $default  reduce using rule 44 (expr)


State 53

   43 expr: INT_CONST .

    $default  reduce using rule 43 (expr)


State 54

   45 expr: BOOL_CONST .

    $default  reduce using rule 45 (expr)


State 55

   21 expr: OBJECTID . ASSIGN expr
   23     | OBJECTID . '(' expr_aux ')'
   42     | OBJECTID .

    ASSIGN  shift, and go to state 73
    '('     shift, and go to state 74

    $default  reduce using rule 42 (expr)


State 56

   40 expr: NOT . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 75


State 57

   36 expr: '~' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 76


State 58

   27 expr: '{' . expr_list '}'

    error       shift, and go to state 77
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr       go to state 78
    expr_list  go to state 79


State 59

   41 expr: '(' . expr ')'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 80


State 60

   16 feature: OBJECTID ':' TYPEID ASSIGN expr .
   22 expr: expr . '.' OBJECTID '(' expr_aux ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_aux ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '@'  shift, and go to state 88
    '.'  shift, and go to state 89

    $default  reduce using rule 16 (feature)


State 61

   20 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 20 (formal)


State 62

   15 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 90


State 63

   19 formal_list: formal_list ',' formal .

    $default  reduce using rule 19 (formal_list)


State 64

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 65

   22 expr: expr . '.' OBJECTID '(' expr_aux ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_aux ')'
   25     | IF expr . THEN expr ELSE expr FI
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    THEN  shift, and go to state 91
    LE    shift, and go to state 81
    '<'   shift, and go to state 82
    '='   shift, and go to state 83
    '+'   shift, and go to state 84
    '-'   shift, and go to state 85
    '*'   shift, and go to state 86
    '/'   shift, and go to state 87
    '@'   shift, and go to state 88
    '.'   shift, and go to state 89


State 66

   56 expr_let: error . IN expr
   57         | error . ',' expr_let

    IN   shift, and go to state 92
    ','  shift, and go to state 93


State 67

   52 expr_let: OBJECTID . ':' TYPEID IN expr
   53         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   54         | OBJECTID . ':' TYPEID ',' expr_let
   55         | OBJECTID . ':' TYPEID ASSIGN expr ',' expr_let

    ':'  shift, and go to state 94


State 68

   28 expr: LET expr_let .

    $default  reduce using rule 28 (expr)


State 69

   22 expr: expr . '.' OBJECTID '(' expr_aux ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_aux ')'
   26     | WHILE expr . LOOP expr POOL
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    LOOP  shift, and go to state 95
    LE    shift, and go to state 81
    '<'   shift, and go to state 82
    '='   shift, and go to state 83
    '+'   shift, and go to state 84
    '-'   shift, and go to state 85
    '*'   shift, and go to state 86
    '/'   shift, and go to state 87
    '@'   shift, and go to state 88
    '.'   shift, and go to state 89


State 70

   22 expr: expr . '.' OBJECTID '(' expr_aux ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_aux ')'
   29     | CASE expr . OF case_list ESAC
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    OF   shift, and go to state 96
    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '@'  shift, and go to state 88
    '.'  shift, and go to state 89


State 71

   30 expr: NEW TYPEID .

    $default  reduce using rule 30 (expr)


State 72

   22 expr: expr . '.' OBJECTID '(' expr_aux ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_aux ')'
   31     | ISVOID expr .
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    '@'  shift, and go to state 88
    '.'  shift, and go to state 89

    $default  reduce using rule 31 (expr)


State 73

   21 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 97


State 74

   23 expr: OBJECTID '(' . expr_aux ')'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    $default  reduce using rule 46 (expr_aux)

    expr      go to state 98
    expr_aux  go to state 99


State 75

   22 expr: expr . '.' OBJECTID '(' expr_aux ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_aux ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   40     | NOT expr .

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '@'  shift, and go to state 88
    '.'  shift, and go to state 89

    $default  reduce using rule 40 (expr)


State 76

   22 expr: expr . '.' OBJECTID '(' expr_aux ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_aux ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   36     | '~' expr .
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    '@'  shift, and go to state 88
    '.'  shift, and go to state 89

    $default  reduce using rule 36 (expr)


State 77

   51 expr_list: error . ';'

    ';'  shift, and go to state 100


State 78

   22 expr: expr . '.' OBJECTID '(' expr_aux ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_aux ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   49 expr_list: expr . ';'

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '@'  shift, and go to state 88
    '.'  shift, and go to state 89
    ';'  shift, and go to state 101


State 79

   27 expr: '{' expr_list . '}'
   50 expr_list: expr_list . expr ';'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '}'         shift, and go to state 102
    '('         shift, and go to state 59

    expr  go to state 103


State 80

   22 expr: expr . '.' OBJECTID '(' expr_aux ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_aux ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   41     | '(' expr . ')'

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '@'  shift, and go to state 88
    '.'  shift, and go to state 89
    ')'  shift, and go to state 104


State 81

   38 expr: expr LE . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 105


State 82

   37 expr: expr '<' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 106


State 83

   39 expr: expr '=' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 107


State 84

   32 expr: expr '+' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 108


State 85

   33 expr: expr '-' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 109


State 86

   34 expr: expr '*' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 110


State 87

   35 expr: expr '/' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 111


State 88

   24 expr: expr '@' . TYPEID '.' OBJECTID '(' expr_aux ')'

    TYPEID  shift, and go to state 112


State 89

   22 expr: expr '.' . OBJECTID '(' expr_aux ')'

    OBJECTID  shift, and go to state 113


State 90

   15 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 114


State 91

   25 expr: IF expr THEN . expr ELSE expr FI

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 115


State 92

   56 expr_let: error IN . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 116


State 93

   57 expr_let: error ',' . expr_let

    error     shift, and go to state 66
    OBJECTID  shift, and go to state 67

    expr_let  go to state 117


State 94
